<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/ert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ert"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <CheckBox
        android:id="@+id/erp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erp"
        android:layout_alignBaseline="@+id/ert"
        android:layout_alignBottom="@+id/ert"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/ext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:text="@string/ext"
        android:layout_alignBaseline="@+id/erp"
        android:layout_alignBottom="@+id/erp"
        android:layout_toRightOf="@+id/erp"
        android:layout_toEndOf="@+id/erp" />
</RelativeLayout>