<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.flo.socoapplication.Homepage"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:id="@+id/etLogin"
            android:textColor="@color/input"
            android:textColorHint="@color/input"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/etPassword"
            android:textColor="@color/input"
            android:textColorHint="@color/input"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/bConnect"
        android:text="@string/connect"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/register"
        android:id="@+id/tvRegister"
        android:textColor="@color/input"/>



</LinearLayout>
